[project]
name = "kernel-dance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "selenium>=4.39.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
	# async
	"ASYNC",
	# ruff-specific
	"RUF",
]

